# cpp-example-repo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/example-repo/: core.hpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  example-cli.cpp
src/lib/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt
